[package]
name = "mqtt-endpoint-tokio"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
mqtt_protocol_core = { path = "../mqtt-protocol-core" }
serde = { version = "1.0", features = ["derive"] }

# TLS support
tokio-rustls = "0.24"
rustls = "0.21"
rustls-native-certs = "0.6"

# WebSocket support
tokio-tungstenite = "0.20"
tungstenite = "0.20"
futures-util = "0.3"
url = "2.4"
